--- a/grails-app/conf/myt-config.properties
+++ b/grails-app/conf/myt-config.properties
@@ -17,6 +17,6 @@ myt.bAppsTokenLength=12
 /* Email Subjects */
 myt.wpaEmailSetSubject=AirBears2 Login Token Set
 myt.wpaEmailDeleteSubject=AirBears2 Login Token Deleted
-myt.bAppsEmailSetSubject=bApps Login Token Set
-myt.bAppsEmailDeleteSubject=bApps Login Token Deleted
+myt.bAppsEmailSetSubject=bApps (Google) Login Token Set
+myt.bAppsEmailDeleteSubject=bApps (Google) Login Token Deleted
 
