Changed 'token' to 'key', so the name of the application is now 'Manage My Keys.'; ticket MMT-10.

--- a/grails-app/conf/myt-config.properties
+++ b/grails-app/conf/myt-config.properties
@@ -15,8 +15,8 @@ myt.wpaTokenLength=8
 myt.bAppsTokenLength=12
 
 /* Email Subjects */
-myt.wpaEmailSetSubject=AirBears2 Login Token Set
-myt.wpaEmailDeleteSubject=AirBears2 Login Token Deleted
-myt.bAppsEmailSetSubject=bApps (Google) Login Token Set
-myt.bAppsEmailDeleteSubject=bApps (Google) Login Token Deleted
+myt.wpaEmailSetSubject=AirBears2 Login Key Set
+myt.wpaEmailDeleteSubject=AirBears2 Login Key Deleted
+myt.bAppsEmailSetSubject=bApps (Google) Login Key Set
+myt.bAppsEmailDeleteSubject=bApps (Google) Login Key Deleted
 
