--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Wed Jun 13 12:39:40 PDT 2012
+#Mon May 09 17:07:39 CEST 2016
 app.grails.version=2.0.4
 app.name=mmk
 app.servlet.version=2.5
-app.version=1.0.1
+app.version=1.0.2
+plugins.webxml=1.4.1
